# lab1

./: CMakeLists.txt  complex.c  complex.h  functions.c  functions.h  main.c  math.c  math.h  matrix.c  matrix.h  menu.c  menu.h  test.c  test.h
